# core-transactional

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  core.postman_collection.json
docs/: README.md
docs/adr/: 0001-use-hexagonal-architecture.md  0002-tdd-testing.md  0003-file-store.md
src/: main.rs
src/domain/: errors.rs  mod.rs  models.rs  processor.rs  repository.rs
src/domain/dto/: client.rs  errors.rs
src/domain/repositories/: mod.rs  new_client.rs  new_credit_transaction.rs  new_debit_transaction.rs  store_balances.rs
src/infra/: errors.rs  mod.rs
src/infra/controllers/: get_client_balance.rs  mod.rs  new_client.rs  new_credit_transaction.rs  new_debit_transaction.rs  store_balances.rs
src/infra/http/: server.rs
src/infra/storage/: alloc_memory.rs  mod.rs
src/infra/store/: file_store.rs
tests/integration/: flows.tests.rs
tests/unit/: requests.test.rs
