[package]
name = "prex"
version = "0.0.4"
edition = "2021"
rust-version = "1.71"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.30", features = ["serde-str"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
actix-http = "3"

[[test]]
name = "unit-server-http"
path = "tests/unit/server-http.rs"

[[test]]
name = "integration-flows"
path = "tests/integration/flows.rs"
